--- a/src/main/java/com/unixkitty/gemspark/TODO.txt
+++ b/src/main/java/com/unixkitty/gemspark/TODO.txt
@@ -13,5 +13,5 @@ Done    b. Recipes
 Done    c. Tags (OreDictionary)
 Done 11. Config file
 Done 12. Generate ores
-13. Give pink sapphire equipment fire effects
-14. Use dynamic math to calculate gem tier numbers
+Done 13. Give pink sapphire equipment fire effects
+Done 14. Use dynamic math to calculate gem tier numbers
