Added dark and light rainbow bricks with emissives

--- a/src/main/resources/assets/gemspark/lang/en_us.json
+++ b/src/main/resources/assets/gemspark/lang/en_us.json
@@ -175,6 +175,8 @@
   "block.gemspark.brazier": "Brazier",
   "block.gemspark.soul_brazier": "Soulfire Brazier",
 
+  "block.gemspark.light_rainbow_bricks": "Light Rainbow Bricks",
+  "block.gemspark.dark_rainbow_bricks": "Dark Rainbow Bricks",
   "block.gemspark.rocky_dirt": "Rocky Dirt",
   "block.gemspark.rocky_grassy_dirt": "Rocky Grassy Dirt",
   "block.gemspark.dark_rocky_dirt": "Dark Rocky Dirt",
