Fixed cosmetic items following head movements, added a new one

--- a/src/main/resources/assets/gemspark/lang/en_us.json
+++ b/src/main/resources/assets/gemspark/lang/en_us.json
@@ -92,6 +92,7 @@
   "item.gemspark.silver_rgb_crown": "Silver RGB Crown",
   "item.gemspark.emerald_tiara": "Emerald Tiara",
   "item.gemspark.silver_emerald_tiara": "Silver Emerald Tiara",
+  "item.gemspark.goat_horns": "Goatlike Horns",
 
   "block.gemspark.tanzanite_ore": "Tanzanite Ore",
   "block.gemspark.topaz_ore": "Topaz Ore",
